tests/ui/traits/next-solver/normalize-capture-place-151579.stderr
error: changes to closure capture in Rust 2021 will affect which traits the closure implements
  --> $DIR/normalize-capture-place-151579.rs:21:13
   |
LL |     let _ = move || {
   |             ^^^^^^^ in Rust 2018, this closure implements `Sync` as `a` implements `Sync`, but in Rust 2021, this closure will no longer implement `Sync` because `a` is not fully captured and `a.0.0` does not implement `Sync`
LL |
LL |         let _x = a.0.0;
   |                  ----- in Rust 2018, this closure captures all of `a`, but in Rust 2021, it will only capture `a.0.0`
   |
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2021/disjoint-capture-in-closures.html>
note: the lint level is defined here
  --> $DIR/normalize-capture-place-151579.rs:5:9
   |
LL | #![deny(rust_2021_incompatible_closure_captures)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: add a dummy let to cause `a` to be fully captured
   |
LL ~     let _ = move || {
LL +         let _ = &a;
   |

error: aborting due to 1 previous error

